--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A utility module for downloading, indexing, caching, and managing FHIR packages from the FHIR Package Registry and Simplifier",
   "main": "dist/index.js",
   "type": "module",
+  "author": "Outburn Ltd.",
+  "license": "MIT",
   "files": [
     "dist",
     "README.md",
@@ -11,8 +13,7 @@
   ],
   "scripts": {
     "build": "ncc build src/index.ts --minify --out dist",
-    "build:test": "ncc build test/index.ts --minify --out test/js",
-    "test": "npm run build && npm run build:test && node test/js/index.js"
+    "test": "vitest run"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -29,6 +30,7 @@
     "globals": "^16.0.0",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1"
+    "typescript-eslint": "^8.30.1",
+    "vitest": "^3.1.1"
   }
 }
