--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "allowJs": true
   },
   "include": [
-    "**/*.ts"
+    "src/**/*.ts"
     // ,"src/hl7.fhir.r4.core/StructureDefinition*.json"
   ],
   "exclude": [
