--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fhir-package-installer",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A utility module for downloading, indexing, caching, and managing FHIR packages from the FHIR Package Registry and Simplifier",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,20 +30,20 @@
   },
   "scripts": {
     "build": "rimraf dist && ncc build src/index.ts --minify --no-cache --out dist",
+    "pretest": "rimraf node_modules/fhir-package-installer && npm run build && node -e \"require('./dist-to-module.cjs')()\"",
     "test": "vitest run"
   },
-  "dependencies": {},
   "devDependencies": {
-    "fs-extra": "^11.3.0",
-    "tar": "^7.4.3",
-    "temp": "^0.9.4",
     "@eslint/js": "^9.24.0",
     "@types/fs-extra": "^11.0.4",
     "@types/temp": "^0.9.4",
     "@vercel/ncc": "^0.38.3",
     "eslint": "^9.24.0",
+    "fs-extra": "^11.3.0",
     "globals": "^16.0.0",
     "rimraf": "^6.0.1",
+    "tar": "^7.4.3",
+    "temp": "^0.9.4",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
