--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "url": "git+https://github.com/Outburn-IL/fhir-package-installer.git"
   },
   "scripts": {
-    "build": "rimraf dist && ncc build src/index.ts --minify --no-cache --out dist",
+    "build": "rimraf dist && ncc build src/index.ts --external fs-extra --minify --no-cache --out dist",
     "pretest": "rimraf node_modules/fhir-package-installer && npm run build && node -e \"require('./test/dist-to-module.cjs')()\"",
     "test": "vitest run"
+  },
+  "dependencies": {
+    "fs-extra": "^11.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
@@ -39,7 +42,6 @@
     "@types/temp": "^0.9.4",
     "@vercel/ncc": "^0.38.3",
     "eslint": "^9.24.0",
-    "fs-extra": "^11.3.0",
     "globals": "^16.0.0",
     "rimraf": "^6.0.1",
     "tar": "^7.4.3",
