--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vercel/ncc": "^0.38.3",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
+    "p-limit": "^6.2.0",
     "rimraf": "^6.0.1",
     "tar": "^7.4.3",
     "temp": "^0.9.4",
