--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fhir-package-installer",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A utility module for downloading, indexing, caching, and managing FHIR packages from the FHIR Package Registry and Simplifier",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -29,7 +29,9 @@
     "url": "git+https://github.com/Outburn-IL/fhir-package-installer.git"
   },
   "scripts": {
-    "build": "rimraf dist && ncc build src/index.ts --external fs-extra --minify --no-cache --out dist",
+    "clean:build": "rimraf dist",
+    "build:ncc": "ncc build src/index.ts --external fs-extra --external tar-stream --external temp --no-cache --out dist",
+    "build": "npm run clean:build && npm run build:ncc",
     "dist-to-module": "rimraf node_modules/fhir-package-installer && npm run build && node test/dist-to-module.js",
     "check-registries": "node test/checkRegistriesAvailable.js",
     "pretest": "npm run dist-to-module && npm run check-registries",
@@ -37,19 +39,20 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "fs-extra": "^11.3.0"
+    "fs-extra": "^11.3.0",
+    "p-limit": "^6.2.0",
+    "tar-stream": "^3.1.7",
+    "temp": "^0.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@types/fs-extra": "^11.0.4",
+    "@types/tar-stream": "^3.1.3",
     "@types/temp": "^0.9.4",
     "@vercel/ncc": "^0.38.3",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
-    "p-limit": "^6.2.0",
     "rimraf": "^6.0.1",
-    "tar": "^7.4.3",
-    "temp": "^0.9.4",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
