--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fhir-package-installer",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "description": "A utility module for downloading, indexing, caching, and managing FHIR packages from the FHIR Package Registry and Simplifier",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,6 +36,8 @@
     "check-registries": "node test/checkRegistriesAvailable.js",
     "pretest": "npm run dist-to-module && npm run check-registries",
     "test": "vitest run",
+    "test:dual-mode": "vitest run test/fhir-package-installer.dual-mode.test.ts",
+    "test:mock-server": "vitest run test/mock-artifactory-server.test.ts",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -50,12 +52,12 @@
     "@types/tar-stream": "^3.1.4",
     "@types/temp": "^0.9.4",
     "@vercel/ncc": "^0.38.3",
-    "eslint": "^9.30.1",
+    "eslint": "^9.32.0",
     "globals": "^16.3.0",
     "rimraf": "^6.0.1",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1",
+    "typescript-eslint": "^8.38.0",
     "vitest": "^3.2.4"
   }
 }
