fix: support both CommonJS and ESM distributions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "module": "commonjs",
     "declaration": true,
-    "declarationMap": true,
+    "declarationMap": false,
     "pretty": true,
     "sourceMap": true,
     "outDir": "dist",
@@ -20,8 +20,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+  "experimentalDecorators": false,
+  "emitDecoratorMetadata": false,
     "resolveJsonModule": true,
     "allowJs": true
   },
