--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     },
     "./dist/types": {
-      "types": "./dist/types/index.d.ts",
       "import": "./dist/types/index.mjs",
-      "require": "./dist/types/index.cjs"
+      "require": "./dist/types/index.cjs",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "author": "Outburn Ltd.",
