--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fhir-package-installer",
-  "version": "1.4.2",
+  "version": "1.5.0",
   "description": "A utility module for downloading, indexing, caching, and managing FHIR packages from the FHIR Package Registry and Simplifier",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -11,6 +11,11 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
+    },
+    "./mock-artifactory-server": {
+      "types": "./dist/mock-artifactory-server.d.ts",
+      "import": "./dist/mock-artifactory-server.mjs",
+      "require": "./dist/mock-artifactory-server.cjs"
     }
   },
   "author": "Outburn Ltd.",
@@ -41,7 +46,7 @@
     "build": "npm run clean && tsup",
     "dist-to-module": "rimraf node_modules/fhir-package-installer && npm run build && node test/dist-to-module.js",
     "check-registries": "node test/checkRegistriesAvailable.js",
-    "pretest": "npm run dist-to-module && npm run check-registries && node test/cjs-test.cjs && node test/esm-test.mjs",
+    "pretest": "npm run dist-to-module && npm run check-registries && node test/cjs-test.cjs && node test/esm-test.mjs && node test/mock-artifactory-cjs-test.cjs && node test/mock-artifactory-esm-test.mjs",
     "test": "vitest run",
     "test:dual-mode": "vitest run test/fhir-package-installer.dual-mode.test.ts",
     "test:mock-server": "vitest run test/mock-artifactory-server.test.ts",
